--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ div#plan div#poniedzialek, div#wtorek, div#sroda, div#czwartek, div#piatek, div#
 div.lekcja{
     position: absolute;
     border-left: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
     width: 100%;
 }
 
